--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.2.1",
     "next-intl": "^3.26.5",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.2",
